[code] adding rpc for getting all users of a emac
